# MatrixMultiplication_Rust

./: README.md
matrix-multiplication-parallel/: Cargo.toml
matrix-multiplication-parallel/src/: main.rs
matrix-multiplication-sequential/: Cargo.toml
matrix-multiplication-sequential/src/: main.rs
